--- a/npm-packages/docs/src/theme/DocSidebar/Desktop/styles.module.css
+++ b/npm-packages/docs/src/theme/DocSidebar/Desktop/styles.module.css
@@ -25,11 +25,6 @@
     color: inherit !important;
     text-decoration: none !important;
   }
-
-  .sidebarLogo img {
-    margin-right: 0.5rem;
-    height: 2rem;
-  }
 }
 
 .sidebarLogo {
